--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </div>
     <div id="p2">
-        <p>Taking Online Application</p>
+        <p>Now Taking Online Application</p>
         <p> <button> Apply here </button></p>
     </div>
     </header>
