--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,51 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-    <div id="nav">
-        <p>My College</p>
-        <nav>
-            <ul>
-                <li><a href="#">Student Login  </a> <span>|</span></li>
-                <li><a href="#">Teacher Login  </a> <span>|</span></li>
-                <li><a href="#">Register  </a> <span>|</span></li>
-                <li><a href="#">Contact </a> <span>|</span></li>
-            </ul>
-        </nav>
-    </div>
-    <div id="p2">
-        <p>Now Taking Online Application</p>
-        <p> <button> Apply here </button></p>
-    </div>
+        <div id="nav">
+            <p>My College</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Student Login </a> <span>|</span></li>
+                    <li><a href="#">Teacher Login </a> <span>|</span></li>
+                    <li><a href="#">Register </a> <span>|</span></li>
+                    <li><a href="#">Contact </a> <span>|</span></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="p2">
+            <p>Now Taking Online Application</p>
+            <p> <button> Apply here </button></p>
+        </div>
     </header>
     <main>
-<p>effef</p>
-
+        <section id="logo_sect">
+            <div id="logos">
+              <div><a href="#"><img src="./assets/img/magnifying.png" alt="loupe"> Take a tour</a> </div>
+              <div><a href="#"><img src="./assets/img/arrow.png" alt="l"> Blablacar</a></div>
+              <div><a href="#"><img src="./assets/img/calendar.png" alt="lo">Calendrier</a></div>
+            </div>
+            <div id="para">
+                <p>Browse our most popular courses <a href="#"> here</a></p>
+            </div>
+        </section>
+        <section id="rose">
+            <p>Want to know more about life at MyCollege?</p>
+            <p>See what our former students have to say</p>
+            <div id="tete">
+                <div><img src="./assets/img/man.png" alt="h">
+                <p>Tom's story</p></div>
+                <div><img src="./assets/img/woman.png" alt="f">
+                <p>Sarah connhor</p></div>
+            </div>
+        </section>
+        <section></section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
