--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                 <p>Sarah connhor</p></div>
             </div>
         </section>
-        <section></section>
+        <section id="volley">
+            <p>Discover our state of the art facilities <a href="#">here</a> </p>
+            <img src="./assets/img/volleyball.jpg" alt="vv">
+        </section>
     </main>
     <footer>
 
