--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
         </section>
     </main>
     <footer>
-
+        <nav>
+            <ul>
+                <li id="leftborder"><a href="/index.html">COURSE FINDER </a></li>
+                <li><a href="/index.html">WHY US ? </a></li>
+                <li><a href="/index.html">HOW TO APPLY </a></li>
+            </ul>
+        </nav>
+        <p>© MyCollege 2015</p>
     </footer>
 </body>
 
