responsive mobile fini

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <p>My College</p>
             <nav>
                 <ul>
-                    <li><a href="#">Student Login </a> <span>|</span></li>
-                    <li><a href="#">Teacher Login </a> <span>|</span></li>
-                    <li><a href="#">Register </a> <span>|</span></li>
-                    <li><a href="#">Contact </a> <span>|</span></li>
+                    <li><a href="#">Student Login </a> </li>
+                    <li><a href="#">Teacher Login </a> </li>
+                    <li><a href="#">Register </a> </li>
+                    <li><a href="#">Contact </a> </li>
                 </ul>
             </nav>
         </div>
