responsiv mobile fini

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <p>My College</p>
             <nav>
                 <ul>
-                    <li><a href="#">Student Login </a> </li>
-                    <li><a href="#">Teacher Login </a> </li>
-                    <li><a href="#">Register </a> </li>
-                    <li><a href="#">Contact </a> </li>
+                    <li><a href="#">STUDENT LOGIN </a> </li>
+                    <li><a href="#">TEACHER LOGIN </a> </li>
+                    <li><a href="#">REGISTER </a> </li>
+                    <li><a href="#">CONTACT </a> </li>
                 </ul>
             </nav>
         </div>
